--- a/spec/dummy/config/locales/en.yml
+++ b/spec/dummy/config/locales/en.yml
@@ -21,3 +21,10 @@
 
 en:
   hello: "Hello world"
+  no_cms:
+    admin:
+      menus:
+        menus:
+          kinds:
+            page: Content page
+            product: Product
