--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,11 @@
 en:
+  activerecord:
+    models:
+      no_cms/menus/menu: Menu
+    attributes:
+      no_cms/menus/menu:
+        name: Name
+        uid: Uid
   no_cms:
     admin:
       menu_items:
