Added editing a menu item test

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -8,6 +8,7 @@ en:
         uid: Uid
       no_cms/menus/menu_item:
         name: Name
+        kind: Kind
   no_cms:
     admin:
       menu_items:
